--- a/content/posts/data-struct/红黑树.md
+++ b/content/posts/data-struct/红黑树.md
@@ -25,12 +25,12 @@ TocOpen: true
 5. 从任一结点到其每个叶子的所有路径都包含相同数目的黑色结点。
 6. 红黑树从根到叶子节点的最长路径不会超过最短路径的两倍
 
-![](./红黑树.jpg)
+![](../红黑树.jpg)
 
 ## 红黑树的调整
 
 在插入，删除的过程中，会破坏红黑树的规则，因此需要进行调整，调整有三种操作，分别是`变色，左旋和右旋`
 
-![](./img/红黑树左旋.gif)
+![](../img/红黑树左旋.gif)
 
-![](./img/红黑树右旋.gif)
+![](../img/红黑树右旋.gif)
