--- a/content/posts/操作系统/进程.md
+++ b/content/posts/操作系统/进程.md
@@ -8,6 +8,7 @@ categories: [""]
 series: ["Themes Guide"]
 ShowToc: true
 TocOpen: true
+mermaid: true
 ---
 
 
@@ -120,10 +121,10 @@ TocOpen: true
 
 ### 进程的状态转化
 
-```mermaid
+{{<mermaid>}}
 stateDiagram
-state 是否可中断 <<fork>>
-state 是否正常退出 <<fork>>
+state 是否可中断 <fork>
+state 是否正常退出 <fork>
     [*] --> 可运行状态: 创建
     可运行状态 --> 是否可中断: 阻塞
     是否可中断 --> 可中断的睡眠状态: 可中断
@@ -137,7 +138,7 @@ state 是否正常退出 <<fork>>
     是否正常退出 --> 僵尸状态: 默认情况
     僵尸状态 --> [*]
     退出状态 --> [*]
-```
+{{</mermaid>}}
 
 ## 系统调用
 
